# MigrateX

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: migratex-ci.yml
extension/: package.json
migratex/: __init__.py
migratex/agents/: __init__.py  architect.py  code_analyzer.py  codemod_designer.py  default.py  doc_writer.py  qa_validation.py  refactorer.py  test_writer.py
migratex/cli/: __init__.py  analyze.py  apply.py  main.py  patterns.py  test.py  test_parallel.py  ui_helpers.py
migratex/core/: __init__.py  context.py  metrics.py  orchestrator.py  task_manager.py
migratex/diff/: __init__.py
migratex/docs/: __init__.py  utils.py
migratex/patterns/: __init__.py  cache.py  discovery.py  library.py  loader.py
migratex/reports/: __init__.py
migratex/testing/: __init__.py  edge_case_fixtures.py  outlier_detector.py  parallel_agents.py  pattern_mapping_verification.py  repository_tester.py  results_tracker.py  test_executor_with_acceptance.py  test_suite_executor.py
migratex/utils/: __init__.py  error_recovery.py  file_ops.py  git_ops.py  interactive.py  outlier_prompts.py
migratex/validation/: __init__.py  runtime.py
scripts/: audit_tests.py  count_tests.py  fix_test_fixtures.py  run_tests_parallel.py  run_tests_parallel_validation.py  test_quality_monitor.py
tests/: conftest.py  pytest_acceptance_plugin.py  run_comprehensive.py
tests/e2e/: test_complete_workflow.py  test_error_path.py  test_git_e2e.py  test_happy_path.py
tests/edge_cases/: test_git_edge_cases.py  test_input_validation.py  test_pattern_detection.py  test_transformation.py
tests/error_recovery/: test_error_recovery.py
tests/integration/: __init__.py  test_agent_communication.py  test_git_branch_workflow.py  test_git_workflow.py  test_workflow.py
tests/outliers/: test_code.py  test_handling.py  test_patterns.py  test_structure.py
tests/pattern_detection/: test_accuracy.py
tests/pattern_mapping/: __init__.py  test_verification.py
tests/performance/: test_performance.py  (+1 more)
(+23 files in other folders)
